# karaoke-showcase

./: AGENTS.md  README.md  docker-compose.otel.yml  docker-compose.prod.certbot.yml  docker-compose.yml  linkedin_post.txt
services/lyrics-extraction-service/: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  README.md  main.py  openapi.json  otel_setup.py  pyproject.toml  voice_separator.py
services/lyrics-extraction-service/components/: __init__.py  audio_chunker.py  base_extractor.py  faster_whisper_extractor.py  lyrics_extractor.py  minio_service.py  stable_ts_aligner.py
services/lyrics-extraction-service/config/: __init__.py  config.py  config.yaml  config_loader.py  settings.py
services/lyrics-extraction-service/models/: __init__.py  common.py  lyrics.py
services/lyrics-extraction-service/routes/: __init__.py  health.py  lyrics.py  openapi.py
services/orchestrator-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  di.py  generate_clients.sh  main.py  openapi.json  otel_setup.py  pyproject.toml  worker.py  worker_otel_setup.py
services/orchestrator-service/clients/lyrics_client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
services/orchestrator-service/clients/lyrics_client/.openapi-generator/: FILES
services/orchestrator-service/clients/lyrics_client/docs/: Chunk.md  DefaultApi.md  ErrorResponse.md  HTTPValidationError.md  HealthApi.md  LocationInner.md  LyricsExtractionApi.md  LyricsExtractionResponse.md  LyricsWithTimestampsResponse.md  ValidationError.md
services/orchestrator-service/clients/lyrics_client/lyrics_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
services/orchestrator-service/clients/lyrics_client/test/: test_chunk.py  test_default_api.py  test_error_response.py  test_health_api.py  test_http_validation_error.py  test_location_inner.py  test_lyrics_extraction_api.py  test_lyrics_extraction_response.py  test_lyrics_with_timestamps_response.py  test_validation_error.py
services/orchestrator-service/clients/song_management_client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
services/orchestrator-service/clients/song_management_client/.openapi-generator/: FILES
services/orchestrator-service/clients/song_management_client/docs/: ApiCommonLyricsChunk.md  DefaultApi.md  DeleteResponse.md  DomainLyricsChunkLyricsChunk.md  HTTPValidationError.md  HealthApi.md  LocationInner.md  Lyrics.md  LyricsApi.md  LyricsChunk.md  LyricsChunkInput.md  LyricsCreate.md  LyricsResponse.md  LyricsSearchResponse.md  LyricsUpdate.md  PaginatedResponseProcessingResultResponse.md  ProcessingResultCreate.md  ProcessingResultResponse.md  ProcessingResultUpdate.md  ProcessingResultWithLyrics.md  ProcessingResultsApi.md  ValidationError.md
services/orchestrator-service/clients/song_management_client/song_management_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
services/orchestrator-service/clients/song_management_client/test/: test_api_common_lyrics_chunk.py  test_default_api.py  test_delete_response.py  test_domain_lyrics_chunk_lyrics_chunk.py  test_health_api.py  test_http_validation_error.py  test_location_inner.py  test_lyrics.py  (+14 more)
services/orchestrator-service/clients/voice_separation_client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
services/orchestrator-service/models/: __init__.py  processing.py  websocket_messages.py  youtube.py
services/orchestrator-service/routes/: __init__.py  health.py  job_progress_consumer.py  openapi.py  processing.py  sign_storage.py
services/orchestrator-service/services/: lyrics_extraction_service.py  minio_service.py  orchestrator_service.py  song_management_service.py  voice_separation_service.py  youtube_downloader.py
services/orchestrator-service/static/: index.html
services/orchestrator-service/tasks/: audio_processing_job.py  queue_tasks.py
services/orchestrator-service/worker/: Dockerfile
services/orchestrator-service/yt/: cookies.txt
services/song-management-service/: .env.docker  .env.local  Dockerfile  MIGRATIONS.md  QUICK_START.md  README.md  di.py  main.py  openapi.json  otel_setup.py  pyproject.toml  setup_db.py
services/song-management-service/alembic/: env.py
services/song-management-service/alembic/versions/: 26a0f9c31617_initial_schema.py
services/song-management-service/api/: common.py  create_processing_result.py  delete_processing_result.py  get_processing_result.py  health.py  openapi.py  search_processing_results_by_lyrics.py  update_processing_result.py
services/song-management-service/domain/: __init__.py  files.py  lyrics.py  lyrics_chunk.py  processing_result.py
services/song-management-service/infrastructure/: __init__.py
services/song-management-service/infrastructure/elasticsearch/: __init__.py  client.py  models.py
services/song-management-service/infrastructure/models/: __init__.py  constants.py  processing_results.py
services/song-management-service/infrastructure/repositories/: __init__.py  sqlalchemy_processing_result_repository.py
services/song-management-service/services/: __init__.py  minio_service.py  processing_result_service.py
services/song-management-service/services/repository_interfaces/: __init__.py  processing_result_repository.py
services/voice-separation-service/: .env.docker  .env.example  .gitignore  Dockerfile  README.md  main.py  openapi.json  otel_setup.py  pyproject.toml
services/voice-separation-service/config/: __init__.py  model_config.py  settings.py  voice_separation_config.yaml
services/voice-separation-service/models/: __init__.py  common.py  separation.py
services/voice-separation-service/routes/: __init__.py  health.py  openapi.py  unified_separation.py
services/voice-separation-service/services/: compress_audio.py  minio_service.py  unified_separation_service.py  zip.py
services/voice-separation-service/services/models/: base_model.py  demucs_model.py  spleeter_model.py
(+234 files in other folders)
