[project]
name = "lyrics-extraction-service"
version = "1.0.0"
description = "Karaoke-Inator Lyrics Extraction Service - AI-powered speech-to-text transcription"
readme = "README.md"
requires-python = "~=3.10.0"
dependencies = [
    "fastapi~=0.128.0",
    "librosa>=0.10.0,<0.11",
    "python-multipart~=0.0.21",
    "soundfile~=0.13.1",
    "torch~=2.9.0",
    "torchaudio~=2.9.0",
    "transformers~=5.0.0",
    "uvicorn~=0.40.0",
    "pydantic~=2.12.0",
    "datasets~=4.5.0",
    "bitsandbytes~=0.49.0",
    "accelerate~=1.12.0",
    "faster-whisper~=1.2.0",
    "scipy~=1.13.0",
    "dtaidistance~=2.3.0",
    "stable-ts[fw]~=2.19.0",
    "minio>=7.2.20",
    "dotenv>=0.9.9",
    "prometheus-client>=0.21.0",
    "httpx~=0.28.1",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc>=0.48b0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
    # { index = "pytorch-cu128" },
]
torchaudio = [
    { index = "pytorch-cpu" },
    # { index = "pytorch-cu128" },
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[project.urls]
Homepage = "https://github.com/majoporse/karaoke-inator"
Repository = "https://github.com/majoporse/karaoke-inator"
